# ml-training-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
ml/input/data/: sample.csv
ml/input/data/training/: divorce.csv.dvc
ml/output/divorce/: .gitignore
ml_training_template/: config.ini  logging.yaml  train
ml_training_template/components/: logger.py
ml_training_template/experiment/: __init__.py  artifacts.py  experiment.py  model.py
ml_training_template/utils/: arg_parser.py  files.py
notebooks/: EDA.ipynb
scripts/: get_data.sh
src/: train
src/experiment/: artifacts.py  experiment.py  model.py
tests/: test_model.py
